--- a/src/component/LoginForm.css
+++ b/src/component/LoginForm.css
@@ -9,7 +9,7 @@
   transform: translate(-50%, -50%);
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   z-index: 10;
   opacity: 30;
   backdrop-filter: blur(10);
@@ -58,12 +58,12 @@ label{
   color: #222;
 }
 
-input{
+.login-input{
   width: 100%;
   padding: 0.6rem 1rem;
   margin-bottom: .5rem;
   border: 1px solid #ccc;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   font-size: 15px;
   color:rgb(124, 120, 120);
 }
@@ -76,7 +76,7 @@ input{
   width: 100%;
   padding: 0.7rem 1rem;
   border: none;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   background-color: #222;
   color: #fff;
   font-size: 15px;
