--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ html {
   position: sticky;
   left: 0;
   top: 0;
-  min-height: 11vh;
+  min-height: 76px;
   display: flex;
   justify-content: space-between;
   align-items: center;
